# crxon-faq-llm

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/api/: chat.py
src/config/: settings.py
src/service/: fetch_service.py  knowledge_base.py  llm_service.py  session_service.py
src/utility/: spinner.py
tests/: test_chat.py  test_fetcher.py  test_kb.py  test_llm.py
